--- a/index.html
+++ b/index.html
@@ -5,17 +5,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;0,900;1,700;1,900&family=Poppins:wght@400;600;700&family=Ubuntu:ital,wght@1,500&display=swap"
+    rel="stylesheet">
+  <link href="style.css" rel="stylesheet" />
   <title>Today I Learned</title>
 </head>
 
 <body>
-  <header>
-    <img src="logo.png" height="68" width="68" alt="dialog logo">
+  <header class="header">
+    <div class="logo">
+    <img src="logo.png" height="113" width="113" alt="butterflies logo">
     <h1>Hello Chief Inspector</h1>
-    <button>Share a fact</button>
+    </div>
+    <button>Share a tidbit</button>
   </header>
 
-  <form action="">
+  <form class="main-form">
     <input type="text" placeholder="Share a fact or quote">
     <span>200</span>
     <input type="text" placeholder="trustworthy source">
@@ -38,29 +46,33 @@
       </ul>
     </aside>
     <ul>
-      <li>
+      <li class="info">
         <p>
           Kubernetes is an open source orchestration software that allows you to run Docker containers & workloads.
           <a href="https://azure.microsoft.com/en-us/solutions/kubernetes-vs-docker/" target="_blank">(Source)</a>
         </p>
         <div>
-          <span>#technology#</span>
+          <span class="tag" style="background-color: rgb(196, 242, 242);">#technology#</span>
+          <div>
           <button>👍<strong>Number</strong></button>
           <button>🤯</button>
           <button>👎</button>
+          </div>
         </div>
       </li>
-      <li>
+      <li class="info">
         <p>
           "You do not have to be good."
           <a href="https://www.vanderbilt.edu/olli/class-materials/2017Summer.MindfulnessWk1.pdf"
             target="_blank">(Source)</a>
         </p>
-        <div></div>
-        <span>#poetry#</span>
+        <div>
+        <span class="tag" style="background-color: lemonchiffon;">#poetry#</span>
+        <div>
         <button>👍</button>
         <button>🤯</button>
         <button>👎</button>
+        </div>
         </div>
       </li>
 
