update button styles

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <span class="tag" style="background-color: rgb(196, 242, 242);">#technology#</span>
         
         <div class="vote-buttons">
-            <button>👍<strong>Number</strong></button>
+            <button>👍</button>
             <button>🤯</button>
             <button>👎</button>
         </div>
