--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <img src="logo.png" height="113" width="113" alt="butterflies logo">
     <h1>Hello Chief Inspector</h1>
     </div>
-    <button class="btn btn-large">Share a tidbit</button>
+    <button class="btn btn-large btn-open">Share a tidbit</button>
   </header>
 
-  <form class="main-form">
+  <form class="main-form hidden">
     <input type="text" placeholder="Share a fact or quote">
     <span>200</span>
     <input type="text" placeholder="trustworthy source">
@@ -102,6 +102,7 @@
 
   </main>
   </div>
+  <script src="script.js"></script>
 </body>
 
 </html>
