--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li class="category"> 
           <button 
             class="btn btn-category" 
-            style="background-color: lemonchiffon;"
+            style="background-color: #fffacd;"
           >
           Poetry
           </button>
@@ -61,14 +61,14 @@
         <li class="category">
           <button 
           class="btn btn-category"
-          style="background-color:  rgb(218, 159, 218);"
+          style="background-color:  #da9fda;"
           >
           Movies
           </button>
           </li>
               <li class="category">
                 <button class="btn btn-category" 
-                style="background-color: rgb(180, 223, 180);"
+                style="background-color: #b4dfb4;"
                 >
           Science
         </button>
