added function to display tidbits

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
       </li>
       </ul>
     </aside>
-    <ul>
+
+  <section>
+    <ul class="facts-list">
       <li class="info">
         <p>
           Kubernetes is an open source orchestration software that allows you to run Docker containers & workloads.
@@ -123,7 +125,7 @@
       </li>
 
     </ul>
-
+  </section>
   </main>
   </div>
   <script src="script.js"></script>
